--- a/src/App.css
+++ b/src/App.css
@@ -1,40 +1,8 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
 
 .header {
-  background: green;
+  background: #182761;
   padding: 1em;
 }
 
@@ -67,7 +35,33 @@ ul.box-list li{
   display: flex;
   justify-content: space-between;
 }
+.box-list-head p, .box-list-head h4 {
+  margin: 0;
+}
 .box-list section {
-  /* display: flex; */
+  width: 90%;
+}
+.box-list button {
+  margin-left: 1em;
+}
+.box-list div {
+  font-size: 0.8em;
+}
+.box-list .box-list-head {
+  margin-bottom: 0.5em;
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.2em;
+}
 
+
+/* add currencies */
+.add-box {
+  padding: 0 0.5em;
+}
+.add-box section{
+  display: flex;
+}
+.add-box select {
+  width: 75%;
 }
